@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2024 the original author or authors.
+ * Copyright 2012-2025 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -52,6 +52,7 @@ import org.springframework.web.context.WebApplicationContext;
  *
  * @author Phillip Webb
  * @author Andy Wilkinson
+ * @author Moritz Halbritter
  * @since 1.4.0
  */
 public class SpringBootMockMvcBuilderCustomizer implements MockMvcBuilderCustomizer {
@@ -69,7 +70,7 @@ public class SpringBootMockMvcBuilderCustomizer implements MockMvcBuilderCustomi
 	 * @param context the source application context
 	 */
 	public SpringBootMockMvcBuilderCustomizer(WebApplicationContext context) {
-		Assert.notNull(context, "Context must not be null");
+		Assert.notNull(context, "'context' must not be null");
 		this.context = context;
 	}
 
@@ -100,7 +101,7 @@ public class SpringBootMockMvcBuilderCustomizer implements MockMvcBuilderCustomi
 			return null;
 		}
 		if (this.print == MockMvcPrint.LOG_DEBUG) {
-			return new LoggingLinesWriter();
+			return (LoggingLinesWriter.isDebugEnabled()) ? new LoggingLinesWriter() : null;
 		}
 		return new SystemLinesWriter(this.print);
 	}
@@ -188,7 +189,12 @@ public class SpringBootMockMvcBuilderCustomizer implements MockMvcBuilderCustomi
 					if (value != null && value.getClass().isArray()) {
 						value = CollectionUtils.arrayToList(value);
 					}
-					this.lines.add(String.format("%17s = %s", label, value));
+					try {
+						this.lines.add("%17s = %s".formatted(label, value));
+					}
+					catch (RuntimeException ex) {
+						this.lines.add("%17s = << Exception '%s' occurred while formatting >>".formatted(label, ex));
+					}
 				}
 
 				List<String> getLines() {
@@ -271,6 +277,10 @@ public class SpringBootMockMvcBuilderCustomizer implements MockMvcBuilderCustomi
 				}
 				logger.debug("MvcResult details:\n" + stringWriter);
 			}
+		}
+
+		static boolean isDebugEnabled() {
+			return logger.isDebugEnabled();
 		}
 
 	}
